# aleo-devnode

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 0_bug.md  1_feature.md  config.yml
.github/workflows/: ci.yml  release.yml
devnode/: 000008.sst  IDENTITY  LOG  LOG.old.1777057794668423  MANIFEST-000010  OPTIONS-000012  block_tree
docs/: cli-usage.md  genesis-and-accounts.md  rest-api.md  storage-and-snapshots.md  testing.md
src/: accounts.rs  advance.rs  logger.rs  main.rs  restore.rs  start.rs  update.rs
src/rest/: mod.rs  routes.rs
src/rest/helpers/: error.rs  mod.rs  path.rs
tests/: integration.rs
