[package]
name = "aleo-devnode"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aleo-devnode"
path = "src/main.rs"

[dependencies]
aleo-std-storage   = { version = "1.0.3", default-features = false }
anyhow             = "1.0"
axum               = "0.8"
axum-extra         = { version = "0.12", features = ["erased-json"] }
clap               = { version = "4.5", features = ["derive"] }
is-terminal        = "0.4"
parking_lot        = "0.12"
rand               = "0.10.1"
rayon              = "1.11"
reqwest            = { version = "0.13", features = ["blocking", "json"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
snarkvm            = { version = "4.6.3", features = ["rocks", "test_consensus_heights", "dev_skip_checks", "test_targets"] }
tokio              = { version = "1.52.3", features = ["full"] }
tower-http         = { version = "0.6.10", features = ["cors", "trace"] }
tower_governor     = "0.8"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
